--- a/app/frontend/Templates/gridPlacar.html
+++ b/app/frontend/Templates/gridPlacar.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"> </script>
     <style>
-        .col{
+        .colE{
             width: 200px;
             height: 200px;
         }
@@ -22,7 +22,7 @@
           <div class="col-lg-4" >
 
           </div>
-          <div class="col">
+          <div class="col colE">
            <!-- Div score -->
           </div>
           <div class="col-lg-4">
