att Diagrama De Sequencia

--- a/app/frontend/Templates/placar.html
+++ b/app/frontend/Templates/placar.html
@@ -130,8 +130,8 @@
             <strong>FOG</strong> 
             </div>
         <form>
-            <button type="button" id="" class="btn btn-outline-light btnEditMatch" data-dismiss=""><i class="fa fa-pencil" style="font-size:20px;"></i></button>
-            <button type="button" id="" class="btn btn-outline-light btnDelMatch" data-dismiss=""><i class="fa fa-trash" style="font-size:20px;"></i></button>
+            <button type="button" id="" class="btn btn-outline-light btnEditMatch" data-dismiss=""><i class="fa fa-pencil" style=""></i></button>
+            <button type="button" id="" class="btn btn-outline-light btnDelMatch" data-dismiss=""><i class="fa fa-trash" style=""></i></button>
         </form>
     </div>
 </body>
