--- a/app/frontend/src/Features/Partida/Views/Header/header.css
+++ b/app/frontend/src/Features/Partida/Views/Header/header.css
@@ -30,3 +30,27 @@ color: #152536;
     left: 1024px;
     top: 78px;
 }
+
+.dataLabel{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px
+}
+.campeonatoLabel{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+}
+
+.x{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center
+}
